--- a/public/styles/About.module.css
+++ b/public/styles/About.module.css
@@ -25,8 +25,8 @@
 }
 .text{
     width: 100%;
-    padding-left: 20px;
-    border-left: 5px solid rgba(74, 120, 74, 0.8) ;
+
+    /*border-left: 5px solid rgba(74, 120, 74, 0.8) ;*/
 }
 .text p{
     color: rgba(74, 120, 74, 0.8) ;
