--- a/public/styles/Contact.module.css
+++ b/public/styles/Contact.module.css
@@ -7,6 +7,8 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    margin-top: 30px;
+    box-shadow:  3px 3px 6px rgb(179, 156, 111);
 }
 .bx{
     position: relative;
@@ -23,10 +25,19 @@
 .form{
     position: relative;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: space-between;
-    height: 20vh;
-    margin-top: 50px;
+    height: 25vh;
+    margin-top: 20px;
+}
+.inputs{
+    position: relative;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 .inputBx{
     display: flex;
@@ -35,7 +46,7 @@
     justify-content: space-between;
     width: 49%;
 }
-.form input{
+.form input, .message textarea{
     position: relative;
     width: 400px;
     height: 50px;
@@ -51,12 +62,65 @@
 .message{
     position: relative;
     height: 100%;
-    width: 49%;
+    width: 50%;
 }
-.message input{
+.message textarea{
     position: relative;
     height: 100%;
     display: flex;
     align-items: flex-start;
     justify-content: flex-start;
+    font-size: 0.8em;
+}
+.btn{
+    position: relative;
+    margin-top: 20px;
+    /*width: 200px;*/
+}
+.btn input{
+    background: rgba(74, 120, 74, 0.8) ;
+    /*width: 100%;*/
+    font-size: 1.2em;
+    color: rgb(249, 248, 236);
+    text-transform: uppercase;
+    border: none;
+}
+
+@media(max-width: 1000px ){
+    .bx{
+        width: 100%;
+    }
+
+}
+@media(max-width:684px){
+
+    .bx h1{
+     font-size: 80px;
+    }
+
+}
+
+@media(max-width:460px){
+    .contact{
+        height: 52vh;
+    }
+    .bx h1{
+        font-size: 60px;
+       }
+       .inputs{
+        flex-direction: column;
+        height: 52vh;
+    }
+    .inputBx,.message{
+        width: 100%;
+    }
+    .inputBx input{
+        height: 40px;
+        margin-bottom: 16px;
+    }
+    .btn{
+        position: relative;
+        margin-top: 0px;
+        padding-top: 16px;
+    }
 }
