--- a/public/styles/Home.module.css
+++ b/public/styles/Home.module.css
@@ -1,7 +1,6 @@
 .bx{
     position: relative;
     width: 100%;
-    /*min-height: 70vh;*/
     height: 100vh;
     margin: 0 auto;
     background: rgba(124, 203, 124,0.8);
@@ -9,6 +8,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    box-shadow:  3px 3px 6px rgb(179, 156, 111);
 }
 .header{
     position: relative;
@@ -22,8 +22,6 @@
     width: 500px;
 }
 .header h1{
- color: #fd8f46;
- color: rgb(56, 36, 3);
  font-size: 150px;
  position: relative;
  letter-spacing: -2px;
@@ -56,22 +54,31 @@
 }
 .info{
     position: relative;
-    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center ;
+    width: 800px;
+}
+.textHeader{
+    position: relative;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 .info h3{
     font-size: 50px;
     color: rgba(74, 120, 74, 0.8);
-
 }
+
 .textHeader h1:nth-child(1){
+    position: relative;
     font-size: 100px;
     text-shadow: none;
-    right: 80px;
+    /*right: 80px;*/
     color: rgba(74, 120, 74, 0.8);
+    width: 100%;
 }
 .body{
     position: absolute;
@@ -107,5 +114,41 @@
     font-size: 2em;
     background: rgba(124, 203, 124,0.8);
     background: pink;
-    border: 2p;
+    
+}
+
+@media(max-width: 1000px ){
+    .header{
+        width: 100%;
+    }
+    .info{
+        width: 90%;
+    }
+}
+@media(max-width:684px){
+    .header h1{
+        font-size: 120px;
+       }
+    .textHeader h1:nth-child(1){
+     font-size: 80px;
+    }
+    .info h3{
+        font-size: 35px;
+    }
+}
+@media(max-width:550px){
+    .header h1{
+        font-size: 100px;
+       }
+    /*.textHeader h1:nth-child(1){
+     font-size: 60px;
+    }*/
+}
+@media(max-width:460px){
+    .header h1:nth-child(2){
+        text-align: center;
+       }
+       .info h3{
+        font-size: 30px;
+    }
 }
