--- a/public/styles/Contact.module.css
+++ b/public/styles/Contact.module.css
@@ -84,6 +84,7 @@
     color: rgb(249, 248, 236);
     text-transform: uppercase;
     border: none;
+    cursor: pointer;
 }
 
 @media(max-width: 1000px ){
