--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -98,6 +98,8 @@
   --light: rgb(227, 213, 184);
   --blue: #679499;
   --dark: #69433A;
+  --green: rgba(74, 120, 74);
+  --background: rgba(124, 203, 124,0.8)
 
 }
 
