--- a/public/styles/Contact.module.css
+++ b/public/styles/Contact.module.css
@@ -2,7 +2,7 @@
     position: relative;
     min-height: 50vh;
     background: pink;
-    /*text-shadow: 5px 10px 2px rgba(124, 203, 124,0.8);*/
+    /*text-shadow: 5px 10px 2px var(--green);*/
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -54,8 +54,8 @@
     border-radius: 5px;
     background: rgb(249, 248, 236);
     font-family: 'Courier New', Courier, monospace;
-    color: rgba(74, 120, 74, 0.8) ;
-    border: 2px solid rgba(74, 120, 74, 0.8);
+    color: var(--green) ;
+    border: 2px solid var(--green);
     padding: 10px;
     outline: pink;
 }
@@ -78,7 +78,7 @@
     /*width: 200px;*/
 }
 .btn input{
-    background: rgba(74, 120, 74, 0.8) ;
+    background: var(--green) ;
     /*width: 100%;*/
     font-size: 1.2em;
     color: rgb(249, 248, 236);
