--- a/public/styles/Home.module.css
+++ b/public/styles/Home.module.css
@@ -3,7 +3,7 @@
     width: 100%;
     height: 100vh;
     margin: 0 auto;
-    background: rgba(124, 203, 124,0.8);
+    background: var(--background);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -24,7 +24,7 @@
 .header h1{
  font-size: 150px;
  position: relative;
- letter-spacing: -2px;
+ /*letter-spacing: -2px;*/
  color: rgb(249, 248, 236);
  text-shadow: 5px 10px 2px pink;
 }
@@ -69,7 +69,7 @@
 }
 .info h3{
     font-size: 50px;
-    color: rgba(74, 120, 74, 0.8);
+    color: var(--green);
 }
 
 .textHeader h1:nth-child(1){
@@ -77,7 +77,7 @@
     font-size: 100px;
     text-shadow: none;
     /*right: 80px;*/
-    color: rgba(74, 120, 74, 0.8);
+    color: var(--green);
     width: 100%;
 }
 .body{
@@ -112,8 +112,9 @@
     justify-content: center;
     font-family: 'Retro Morely Regular';
     font-size: 2em;
-    background: rgba(124, 203, 124,0.8);
+    background: var(--green);
     background: pink;
+    color: rgb(249, 248, 236);
     
 }
 
@@ -140,9 +141,6 @@
     .header h1{
         font-size: 100px;
        }
-    /*.textHeader h1:nth-child(1){
-     font-size: 60px;
-    }*/
 }
 @media(max-width:460px){
     .header h1:nth-child(2){
