--- a/public/styles/About.module.css
+++ b/public/styles/About.module.css
@@ -130,6 +130,7 @@
     border-radius: 5px;
     /*border: 3px solid var(--green);*/
     box-shadow:  3px 3px 0px pink;
+    height: 40px;
 }
 @media(max-width: 1000px ){
     .about{
