--- a/public/styles/Home.module.css
+++ b/public/styles/Home.module.css
@@ -1,7 +1,7 @@
 .bx{
     position: relative;
     width: 100%;
-    height: 100vh;
+    height: 100dvh;
     margin: 0 auto;
     background: var(--background);
     display: flex;
@@ -70,6 +70,7 @@
 .info h3{
     font-size: 40px;
     color: var(--green);
+    margin-top: 3vh;
 }
 
 .textHeader h1:nth-child(1){
@@ -152,6 +153,13 @@
        }
 }
 @media(max-width:460px){
+    .header h1{
+        font-size: 60px;
+        text-shadow: 3px 8px 2px pink;
+       }
+    .textHeader h1:nth-child(1){
+     font-size: 40px;
+    }
     .header h1:nth-child(2){
         text-align: center;
        }
