--- a/public/styles/Contact.module.css
+++ b/public/styles/Contact.module.css
@@ -1,6 +1,5 @@
 .contact{
     position: relative;
-    min-height: 50vh;
     background: pink;
     /*text-shadow: 5px 10px 2px var(--green);*/
     display: flex;
@@ -21,6 +20,7 @@
     position: relative;
     font-size: var(--font-size-full);
     color: rgb(249, 248, 236);
+    letter-spacing: 2px; 
 }
 .form{
     position: relative;
@@ -28,21 +28,21 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
-    height: 25vh;
+    min-height: 25vh;
     margin-top: 20px;
 }
 .inputs{
     position: relative;
     width: 100%;
-    height: 100%;
     display: flex;
     align-items: center;
     justify-content: space-between;
+    
 }
 .inputBx{
     display: flex;
     flex-direction: column;
-    height: 100%;
+    height: 20vh;
     justify-content: space-between;
     width: 49%;
 }
@@ -61,7 +61,7 @@
 }
 .message{
     position: relative;
-    height: 100%;
+    height: 20vh;
     width: 50%;
 }
 .message textarea{
@@ -74,12 +74,11 @@
 }
 .btn{
     position: relative;
-    margin-top: 20px;
-    /*width: 200px;*/
+    margin-top: 16px;
 }
 .btn input{
+    position: relative;
     background: var(--green) ;
-    /*width: 100%;*/
     font-size: 1.2em;
     color: rgb(249, 248, 236);
     text-transform: uppercase;
@@ -102,15 +101,14 @@
 }
 
 @media(max-width:460px){
-    .contact{
-        height: 52vh;
-    }
+
     .bx h1{
         font-size: var(--font-size-short);
        }
        .inputs{
         flex-direction: column;
-        height: 52vh;
+        /*height: 50vh;*/
+        justify-content: flex-start;
     }
     .inputBx,.message{
         width: 100%;
@@ -123,5 +121,6 @@
         position: relative;
         margin-top: 0px;
         padding-top: 16px;
+        
     }
 }
