--- a/public/styles/Home.module.css
+++ b/public/styles/Home.module.css
@@ -24,9 +24,10 @@
 .header h1{
  font-size: 100px;
  position: relative;
- /*letter-spacing: -2px;*/
+ letter-spacing: 2px;
  color: rgb(249, 248, 236);
- text-shadow: 5px 10px 2px pink;
+ /*text-shadow: 5px 10px 2px pink;*/
+ text-shadow: 4px 6px 2px pink;
 }
 .btnBx{
     position: relative;
@@ -71,6 +72,7 @@
     font-size: 40px;
     color: var(--green);
     margin-top: 3vh;
+    letter-spacing: 1px;
 }
 
 .textHeader h1:nth-child(1){
@@ -155,7 +157,7 @@
 @media(max-width:460px){
     .header h1{
         font-size: 60px;
-        text-shadow: 3px 8px 2px pink;
+        text-shadow: 3px 4px 2px pink;
        }
     .textHeader h1:nth-child(1){
      font-size: 40px;
