--- a/public/styles/Home.module.css
+++ b/public/styles/Home.module.css
@@ -8,7 +8,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    box-shadow:  3px 3px 6px rgb(179, 156, 111);
+    /*box-shadow:  3px 3px 6px rgb(179, 156, 111);*/
 }
 .header{
     position: relative;
@@ -111,10 +111,10 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    font-family: 'Retro Morely Regular';
+    font-family: 'TerrorofVampireCastle';
     font-size: 2em;
     background: var(--green);
-    background: pink;
+    background: rgb(255, 192, 203);
     color: rgb(249, 248, 236);
     
 }
