--- a/public/styles/About.module.css
+++ b/public/styles/About.module.css
@@ -7,6 +7,9 @@
     flex-direction: column;
     align-items: center;
     justify-content: flex-start;
+    padding-left: 20px;
+    padding-right: 20px;
+    
 }
 .aboutBx{
     position: relative;
@@ -52,7 +55,7 @@
     height: 250px;
     width: 200px;
     transform: rotate(-20deg);
-    box-shadow:  3px 3px 6px rgb(179, 156, 111);
+    box-shadow:  3px 3px 6px rgb(160, 159, 157);
 }
 
 .imageBx{
