--- a/public/styles/Experience.module.css
+++ b/public/styles/Experience.module.css
@@ -2,12 +2,14 @@
     position: relative;
     width: 100%;
     height: 100vh ;
-    background: rgba(255, 192, 203,0.8);
     background:  var(--background);
-
     /*box-shadow:  3px 3px 6px rgb(179, 156, 111);*/
     display: flex;
     flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding-left: 20px;
+    padding-right: 20px;
     
 }
 .experience h1{
@@ -26,7 +28,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-around;
+    justify-content: center;
     padding: 20px;
     
 }
@@ -55,8 +57,8 @@
 .projects{
     position: relative;
     width: 100%;
-    /*padding-top: 30px;*/
-    height: 100%;
+    padding-top: 50px;
+   /* height: 100%;*/
     display: flex;
     align-items: center;
 
