--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -142,6 +142,7 @@ body {
     /*background: rgb(39, 39, 39);
     background: var(--light);*/
     background: var(--light);
+    
 }
 
 a {
@@ -164,28 +165,25 @@ a {
   text-transform: uppercase;
 }
 
-/*.slick-next:before,
-.slick-prev:before {
-
-    width: 200px !important;
-    height: 200px !important;
-    border-radius: 50%;
+.swiper-button-next,
+.swiper-button-prev {
+    z-index: 10; 
+    cursor: pointer; 
+    color: green !important;
 }
 
-.slick-next:hover:before,
-.slick-prev:hover:before {
-    color: var(--hlColorHover); 
-}*/
 
-.slick-arrow {
-  color: #000; /* Cambia el color de las flechas */
-  font-size: 30px; /* Ajusta el tamaño de las flechas */
- }
- 
- .slick-arrow:hover {
-  color: #f00; /* Cambia el color de las flechas al pasar el mouse */
- }
- 
+  .swiper-pagination-bullet {
+    width: 12px;
+    height: 12px;
+    background: #000 !important;
+    opacity: 1;
+}
+
+.swiper-pagination-bullet-active {
+    background: #f00;
+}
+
 
 
 
