--- a/public/styles/About.module.css
+++ b/public/styles/About.module.css
@@ -2,11 +2,12 @@
     position: relative;
     width: 1000px;
     margin: 0 auto;
-    min-height: 50vh;
+
+    height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: flex-start;
+    justify-content: center;
     padding-left: 20px;
     padding-right: 20px;
     
