--- a/public/styles/Contact.module.css
+++ b/public/styles/Contact.module.css
@@ -1,7 +1,7 @@
 .contact{
     position: relative;
-    background: pink;
-    min-height: 200px;
+    /*background: pink;*/
+    height: 100vh;
     /*text-shadow: 5px 10px 2px var(--green);*/
     display: flex;
     flex-direction: column;
@@ -13,7 +13,7 @@
     position: relative;
     width: 1000px;
     margin: 0 auto;
-    height: 100%;
+
     padding: 20px;
 }
 .bx h1{
