--- a/public/styles/Experience.module.css
+++ b/public/styles/Experience.module.css
@@ -1,13 +1,13 @@
 .experience{
     position: relative;
     width: 100%;
-    height: 100vh ;
-    background:  var(--background);
+    min-height: 100vh ;
+
     /*box-shadow:  3px 3px 6px rgb(179, 156, 111);*/
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: space-around;
     padding-left: 20px;
     padding-right: 20px;
     
