--- a/public/styles/ExperienceCard.module.css
+++ b/public/styles/ExperienceCard.module.css
@@ -51,7 +51,7 @@
     display: flex;
     align-items: center;
     justify-content: space-around;
-    height: 400px;
+    min-height: 400px;
 }
 .info{
     position: relative;
@@ -91,4 +91,16 @@
     filter: grayscale(0);
 
     transition: 0.3s;
+}
+@media(max-width:848px){
+    .cardBx{
+
+        flex-direction: column;
+        align-items: center;
+
+    }
+    .imageCont{
+        margin-top: 25px;
+        left: 0px;
+    }
 }
