--- a/public/styles/Principal.module.css
+++ b/public/styles/Principal.module.css
@@ -4,6 +4,12 @@
     min-height: 100vh;  
     /*padding: 30px;*/
 }
+.background{
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background: var(--background);
+}
 /*@media(max-width:508px){
     .cont{
         padding: 20px;
