--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -184,7 +184,55 @@ a {
     background: #f00;
 }
 
+/* En tu archivo CSS */
+.fade-in {
+  opacity: 0;
+  top: 60px;
+  animation: fadeIn  2s ease-in-out forwards;
+}
+.show  {
+  opacity: 0;
+  top: 60px;
+  animation: fadeIn  1s ease-in-out calc(var(--i) * 1.2s) forwards;
 
+}
+.occAnim{
+  animation: fadeIn  2s ease-in-out forwards;
+}
+
+
+@keyframes fadeIn {
+  0% {
+      opacity: 0;
+      top: 60px;
+  }
+  50%{
+    opacity: 0.8;
+    top: 0;
+  }
+  100%{
+    opacity: 1;
+    top: 0px;
+  }
+}
+
+@keyframes fadeout {
+  0% {
+      opacity: 0;
+      width: 0px;
+      height: 0px;
+  }
+  50%{
+    opacity: 0.8;
+    width: 0px;
+      height: 0px;
+  }
+  100%{
+    opacity: 1;
+    width: 100%;
+      height: 100vh;
+  }
+}
 
 
 @keyframes rotateText {
